--- a/style1.scss
+++ b/style1.scss
@@ -433,6 +433,21 @@ body {
                 letter-spacing: 1px;
             }
 
+            .seemore{
+                display:block;
+                margin-top: 60px;
+                font-size: 12px;
+                justify-self: flex-end;
+                text-decoration: none;
+                transform: scale(1);
+                transition: all 300ms ease-in;
+
+                &:hover{
+                    /* transform: scale(1.1); */
+                    font-size: 14px;
+                }
+                
+            }
             @for $i from 1 through 4{
                 .rec-thread-#{$i} {
                     //font-size: 18px;
@@ -842,6 +857,18 @@ body {
     display: none;
 
 }
+
+.dropdown-menu{
+    //border: 2px solid palevioletred;
+    box-shadow: 0 1px 10px 1px rgba(0, 0, 0, 0.247);
+}
+
+//hiding signup and signin of mobile
+.floating-section-mobile, .floating-login-section-mobile{
+    display: none;
+}
+
+
 
 
 @media (max-width:991.98px) {
